Fixed project links alignment issues and shrunk font for 568px screen width breakpoint

--- a/scss/base/breakpoints/_568px.scss
+++ b/scss/base/breakpoints/_568px.scss
@@ -34,6 +34,17 @@
         }
       }
     }
+
+    .project-links {
+      li {
+        margin-bottom: 0;
+        padding: 0;
+      }
+    }
+
+    .project-description {
+      font-size: 14px;
+    }
   }
   
   footer {
